Fixed map visibility and improved responsive grid

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <title>mapty // Map your workouts</title>
   </head>
   <body>
-    <div class="sidebar">
+    <div class="sidebar item1">
       <!-- <img src="logo.png" alt="Logo" class="logo" /> -->
       <h1 class="topic">Map</h1>
       <ul class="workouts">
@@ -122,6 +122,6 @@
       </ul>
     </div>
 
-    <div id="map"></div>
+    <div id="map" class="item2"></div>
   </body>
 </html>
